# Peli-search

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml  sdk.yml
core/: Cargo.toml
core/benches/: ranking.rs
core/src/: document.rs  engine.rs  error.rs  highlighting.rs  index.rs  lib.rs  search.rs  tokenizer.rs  types.rs
core/src/aggregation/: aggregation.rs  metrics.rs  mod.rs  terms.rs
core/src/compression/: compressed_index.rs  compressed_posting_list.rs  delta.rs  doc_id_mapper.rs  mod.rs  varint.rs
core/src/filter/: evaluator.rs  mod.rs  range_filter.rs  term_filter.rs
core/src/index/: index.rs  inverted.rs  manager.rs  mod.rs
core/src/query/: analytics.rs  bool_query.rs  cache.rs  constant_score_query.rs  dis_max_query.rs  executor.rs  fuzzy_query.rs  match_query.rs  mod.rs  multi_match_query.rs  optimizer.rs  phrase_query.rs  planner.rs  prefix_query.rs  query.rs  range_query.rs  request.rs  term_query.rs
core/src/ranking/: bm25.rs  explanation.rs  mod.rs  scorer.rs  statistics.rs
core/src/schema/: field.rs  field_type.rs  mapping.rs  mod.rs
core/src/sort/: comparator.rs  mod.rs  sort.rs
core/src/storage/: compaction.rs  manifest.rs  merge_policy.rs  mod.rs  result_merger.rs  segment.rs  segment_manager.rs  segment_metadata.rs  segment_registry.rs  segment_searcher.rs  snapshot.rs  storage.rs  wal.rs
core/tests/: aggregations.rs  multi_index.rs  persistence.rs  recovery.rs  sorting.rs  wal.rs
crates/pelisearch-server/: Cargo.toml
crates/pelisearch-server/src/: config.rs  main.rs  routes.rs  state.rs
crates/pelisearch-server/src/handlers/: documents.rs  indexes.rs  mod.rs  monitoring.rs  openapi.rs
crates/pelisearch-server/src/middleware/: auth.rs  logging.rs  metrics.rs  mod.rs  rate_limit.rs  request_id.rs
crates/pelisearch-server/tests/: api_documents.rs  api_indexes.rs  api_search.rs  recovery.rs
crates/pelisearch-server/tests/common/: mod.rs
docs/: config.json  config.toml  openapi.yaml  swagger-ui.html
docs/architecture/: api-design.md  inverted-index.md  query-engine.md  ranking-engine.md  storage-engine.md  system-overview.md  vector-engine.md
docs/concepts/: architecture.md  documents.md  indexes.md  mappings.md  search-ranking.md  storage-engine.md
docs/getting-started/: first-index.md  first-search.md  installation.md  quickstart.md
docs/guides/: aggregations.md  filtering.md  full-text-search.md  hybrid-search.md  pagination.md  production-deployment.md  sorting.md  vector-search.md
docs/roadmap/: future.md  v1.md  v2.md  vision.md
docs/sdk/: README.md
docs/sdk/go/: README.md
docs/sdk/javascript/: README.md
docs/sdk/python/: README.md
docs/sdk/rust/: README.md
examples/blog/: README.md
examples/blog/javascript/: main.mjs  package.json
examples/blog/python/: main.py
examples/docs/: README.md
examples/docs/javascript/: main.mjs  package.json
examples/docs/python/: main.py
examples/ecommerce/: README.md
examples/ecommerce/javascript/: main.mjs  package.json
examples/ecommerce/python/: main.py
examples/jobs/: README.md
examples/jobs/javascript/: main.mjs  package.json
examples/jobs/python/: main.py
sdk/: README.md
sdk/go/pelisearch/: README.md  client.go  document.go  go.mod  index.go  integration_test.go  search.go  types.go
sdk/javascript/: package-lock.json  package.json
sdk/javascript/src/: client.ts  documents.ts  errors.ts  index.ts  indexes.ts  search.ts  types.ts
sdk/python/: README.md  pyproject.toml
sdk/python/src/pelisearch/: __init__.py  client.py  documents.py  exceptions.py  indexes.py  search.py  types.py
sdk/python/src/pelisearch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: client.rs  index.rs  lib.rs  search.rs  types.rs
sdk/rust/tests/: integration.rs
sdk/shared/: README.md  types.ts
sdk/shared/generators/: README.md
sdk/shared/openapi/: pelisearch.yaml
sdk/shared/schemas/: Document.json  (+6 more)
sdk/tests/: README.md  run.sh
skills/core/: best-practices.md  indexing.md  installation.md  searching.md
skills/examples/: ai-rag.md  blog.md  docs-search.md  ecommerce.md  wiki.md
skills/go/: examples.md  indexing.md  install.md  searching.md
skills/javascript/: examples.md  indexing.md  install.md  searching.md
skills/python/: examples.md  indexing.md  install.md  searching.md
skills/rust/: examples.md  indexing.md  install.md  searching.md
(+5 files in other folders)
