[package]
name = "pelisearch-core"
version = "0.1.0"
edition = "2024"

[dependencies]
crc32fast = "1.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "ranking"
harness = false
