[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pelisearch"
version = "0.1.0"
description = "Official Python SDK for PeliSearch"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "PeliSearch Contributors" },
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]
keywords = ["pelisearch", "search", "full-text-search", "client"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]

[project.urls]
Homepage = "https://github.com/Open-Collective-Labs/Peli-search"
Repository = "https://github.com/Open-Collective-Labs/Peli-search"
Documentation = "https://github.com/Open-Collective-Labs/Peli-search"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "mypy>=1.8",
    "ruff>=0.3",
]

[tool.setuptools.packages.find]
where = ["src"]
