[package]
name = "pelisearch"
version = "0.1.0"
edition = "2024"
description = "Official Rust SDK for PeliSearch"
license = "MIT"
homepage = "https://github.com/Open-Collective-Labs/Peli-search"
repository = "https://github.com/Open-Collective-Labs/Peli-search"
documentation = "https://docs.rs/pelisearch"
readme = "README.md"
keywords = ["pelisearch", "search", "full-text-search", "client"]
categories = ["web-programming::http-client", "api-bindings"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = "2"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
